sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: ';' expected but ')' found.
    for (j <- i+1 to lgr)-1) {
                           ^