sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var lgr=getNombreValeurs
  for (i <- 0 to lgr-2) {
    var min=i
    for (j <- i+1 to lgr)-1) {
      if (plusPetit(j,min)) {
        min=j
      }
    }
    echange(min,i)
  }
}